--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -5,12 +5,11 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
-<div >
+<app-nav></app-nav>
   <h1>Dating App</h1>
+  <app-home></app-home>
+  
 
-  <app-value></app-value>
-
-  </div>
 
 
 
