--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="col-sm-4">
         <div class="card">
-          <img class="card-img-top img-thumbnail" src="{{user.photoUrl}}" alt="{{user.knownAs}}" >
+          <img class="card-img-top img-thumbnail" src="{{photoUrl}}" alt="{{user.knownAs}}" >
           <div class="card-body">
             <div><strong>Location:</strong><p>{{user.city}}, {{user.country}}</p></div>
             <div><strong>Age:</strong><p>{{user.age}}</p></div>
@@ -44,7 +44,9 @@
                   </form>
                     
                 </tab>              
-                <tab heading="Edit Photo" ><p>Phto edit will go here</p></tab>
+                <tab heading="Edit Photo" >
+                <app-photo-editor [photos] = "user.photos" (getMemberPhotoChange) = "updateMainPhoto($event)"></app-photo-editor>                 
+                </tab>
             </tabset>
         </div> <!-- End of tab panel-->          
     </div> <!-- End of sm-8-->
