--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -11,7 +11,7 @@
               <div><strong>Location:</strong><p>{{user.city}}, {{user.country}}</p></div>
               <div><strong>Age:</strong><p>{{user.age}}</p></div>
               <div><strong>Last Active:</strong><p>{{user.lastActive}}</p></div>
-              <div><strong>Member Since:</strong><p>{{user.created}}</p></div>
+              <div><strong>Member Since:</strong><p>{{user.created | date: 'mediumDate'}}</p></div>
             </div> <!-- End of card body-->
             <div class="card-footer">
               <div class="btn-group d-flex">
