--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -12,11 +12,11 @@
   <div class="row">
     <div class="col-sm-4">
         <div class="card">
-          <img class="card-img-top img-thumbnail" src="{{photoUrl || '../../../assets/user.png'}}" alt="{{user.knownAs}}" >
+          <img class="card-img-top img-thumbnail" src= "{{photoUrl || '../../../assets/user.png'}}" alt="{{user.knownAs}}" >
           <div class="card-body">
             <div><strong>Location:</strong><p>{{user.city}}, {{user.country}}</p></div>
             <div><strong>Age:</strong><p>{{user.age}}</p></div>
-            <div><strong>Last Active:</strong><p>{{user.lastActive}}</p></div>
+            <div><strong>Last Active:</strong><p>{{user.lastActive | timeago}}</p></div>
             <div><strong>Member Since:</strong><p>{{user.created }}</p></div>
           </div> <!-- End of card body-->
           <div class="card-footer">            
